Make it work as a hidden service

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -8,7 +8,10 @@ command=service tor start
 command=service privoxy start
 
 [program:shadowcash]
-command=shadowcoind
+command=sh /shadow.sh
 
 [program:cron]
 command=service cron start
+
+[program:i2p]
+command=i2prouter start
